# origin

./: CMakeLists.txt
HW29_Dinamyc_prog/Task_1/: Task_1.cpp
HW29_Dinamyc_prog/Task_2/: Task_2.cpp
HW31_Deck/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW31_Deck/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW31_Deck/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_13_Structures/Task_1/: task1_months.cpp
HW_13_Structures/Task_2/: Task_2_bank_account.cpp
HW_13_Structures/Task_3/: Task_3_address.cpp
HW_14_Classes/Task_2_Counter/: Task_2_Counter.cpp
HW_15_Adresses/: HW_15_Adresses.cpp  HW_15_Adresses.sln  HW_15_Adresses.vcxproj
HW_15_Adresses/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_15_Adresses/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_16_Figures/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_16_Figures/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_16_Figures/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_17_Libs/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj  maths.cpp  maths.h
HW_17_Libs/Task_2/: Counter.h  Task_2.sln  Task_2.vcxproj
HW_17_Libs/Task_3/: Equil_Triangle.cpp  Quad.h  Right_Triangle.cpp  Romb.cpp  Square.h  Task_3.cpp  Task_3.sln  Triangle.h
HW_20_Libs/Task_2/: Counter.cpp  Task_2.cpp
HW_20_Libs/Task_3/: Equil_Triangle.h  Figure.cpp  Figure.h  Parallelogram.cpp  Quad.cpp  Rectangle.cpp  Task_3.vcxproj  Triangle.cpp
HW_20_Preprocessor/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_20_Preprocessor/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_22/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_22/Task_2/: Equil_Triangle.cpp  Exceptions.cpp  Exceptions.h  Figure.cpp  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.h  Quad.cpp  Right_Triangle.cpp  Task_2.cpp  Task_2.sln  Task_2.vcxproj  Triangle.cpp
HW_23/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_23/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_24_CMAKE/Task_1/: CMakeLists.txt  Task_1.cpp
HW_24_CMAKE/Task_2/: CMakeLists.txt
HW_25/Task3_1/: CMakeLists.txt  Leaver.cpp  Leaver.h  Task_3.cpp
HW_25/Task_3/: CMakeLists.txt
HW_26_Test/Task_1/: Task_1.sln
HW_27_Races/: CMakeLists.txt
HW_27_Races/VehicleRacingApp/: CMakeLists.txt  VehicleRacingApp.sln  VehicleRacingApp.vcxproj  main.cpp
HW_27_Races/VehicleRacingLib/: AirVehicle.cpp  AirVehicle.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  GroundVehicle.cpp  GroundVehicle.h  MagicCarpet.cpp  MagicCarpet.h  Race.cpp  Race.h  Vehicle.cpp  Vehicle.h  VehicleRacingLib.vcxproj  transport.h  transport_impl.cpp
HW_28_Algorithms/Task_2/: Task_2.cpp
HW_30_Sort/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_30_Sort/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_30_Sort/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_32_Trees/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_32_Trees/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_33_Hash/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_33_Hash/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_33_Hash/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_34_Grath/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_35_OrGrath/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_35_OrGrath/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_36_Lync/Task_1/: Task_1.cpp
HW_37_RAII/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_37_RAII/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_38_Tests/Task_1/: main.cpp
HW_38_Tests/Task_2/: main.cpp
HW_39_Func/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_39_Func/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_39_Func/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_40_STL_1/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_40_STL_1/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_40_STL_1/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_41_STL_2/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_41_STL_2/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_42_Smart_ptr/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_42_Smart_ptr/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_43_Move_Semantic/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_43_Move_Semantic/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_44_INI_Parser/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_48_C_SQL/Task_1/: CMakeLists.txt  Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_49_ORM/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_50_Thread/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_50_Thread/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_51_Racing/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_51_Racing/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_51_Racing/Task_3/: Task_3.cpp  Task_3.sln  Task_3.vcxproj
HW_52_Async/Task_1/: Task_1.sln  Task_1.vcxproj
HW_52_Async/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_53_Net/tcp_multi_project/: CmakeLists.txt
HW_54_Docker/Task_1/: Dockerfile  Task_1.cpp
HW_54_Docker/Task_2/: Dockerfile.clang  Dockerfile.gcc  main.cpp
HW_55_Queue/Queue/: Queue.cpp  Queue.sln  Queue.vcxproj
HW_56_Patterns/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj  sql_query_builder.h
HW_56_Patterns/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj  sql_query_builder.h
HW_57_Structure_Patterns/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_57_Structure_Patterns/Task_2/: Task_2.cpp  Task_2.sln  Task_2.vcxproj
HW_58_Behaivor_Patterns/Task_1/: Task_1.cpp  Task_1.sln  Task_1.vcxproj
HW_60_Final/search_engine/: CMakeLists.txt  config.ini
HW_60_Final/search_engine/src/: main.cpp
HW_60_Final/search_engine/src/config/: config.cpp  config.h
HW_60_Final/search_engine/src/database/: db.cpp  db.h
HW_60_Final/search_engine/src/parser/: html_parser.cpp  html_parser.h
HW_60_Final/search_engine/src/search/: server.cpp  server.h
HW_60_Final/search_engine/src/spider/: spider.cpp  spider.h
(+81 files in other folders)
